bug: Remove overflow hidden from body in globals.css for scrolling in the website

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,6 @@
 
 body {
     max-width: 100vw;
-    overflow: hidden;
     background-color: var(--bg);
     color: var(--textColor);
     font-family: 'Roboto', sans-serif;
